SHow only 10 genes,  remove genome overlay, and fix z-index

--- a/src/ui/Filters/Filter.css
+++ b/src/ui/Filters/Filter.css
@@ -1,15 +1,15 @@
 .filter {
   display: flex;
   flex-direction: column;
-  justify-content: left;
-  align-content: left;
+  justify-content: flex-start;
+  align-content: flex-start;
 
   gap: 7px;
 
   position: absolute;
   height: auto;
   margin: 10px;
-  width: 20%;
+  width: fit-content;
 
   z-index: 100;
 }
