--- a/src/ui/Navbar/FilterIndicator.css
+++ b/src/ui/Navbar/FilterIndicator.css
@@ -1,7 +1,7 @@
 #filter-container {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  z-index: 1000;
 }
 
 .list {
