--- a/src/ui/Overlay/Overlay.css
+++ b/src/ui/Overlay/Overlay.css
@@ -1,8 +1,5 @@
 /* /src/ui/Overlay.css */
 .overlay {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* Ensure content starts from the left */
     position: absolute;
     right: 0px; /* Position it to stick to the left */
     bottom: 0px;
@@ -10,7 +7,7 @@
     height: 50%; /* Set height to 50% of the screen height */
     background-color: #000000;
     border: 2px solid #909090;
-    z-index: 1000;
+    z-index: 10;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5), 0 6px 20px rgba(0, 0, 0, 0.19);
     border-radius: 10px;
     padding: 5px;
